--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
     </ol>
     <div class="carousel-inner img  ">
       <div class="carousel-item active">
-        <img src="/p10.jpg" class="d-block w-100" alt="...">
+        <img src="ipectrinity/thevisionaries/edit/main/p10.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/p4.jpg" class="d-block w-100" alt="...">
+        <img src="ipectrinity/thevisionaries/edit/main/p4.jpg" class="d-block w-100" alt="...">
        
       </div>
       <div class="carousel-item">
-        <img src="/p14.jpg" class="d-block w-100" alt="...">
+        <img src="ipectrinity/thevisionaries/edit/main/p14.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
