--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </ol>
     <div class="carousel-inner img  ">
       <div class="carousel-item active">
-        <img src="p10.jpg" class="d-block w-100" alt="...">
+        <img src="https://github.com/ipectrinity/thevisionaries/blob/main/p10.jpg?raw=true" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
         <img src="p4.jpg" class="d-block w-100" alt="...">
